Update 1 - Copia.html

--- a/DOCUMENTOS/HTML/1 - Copia.html
+++ b/DOCUMENTOS/HTML/1 - Copia.html
@@ -262,6 +262,12 @@ Código: <a href="#NOME🔴"><img src="imagem.jpg🔴"></a>
 <!------------------------------------------------->
 <!------------------------------------------------->
 <li><a href="
+https://github.com/santos246/PESQUISANDO/archive/refs/heads/main.zip
+" target="_blank">
+DOWNLOAD DESSE SITE ONLINE GITHUB
+</a></li>
+<!------------------------------------------------->
+<li><a href="
 LINK🔴
 " target="_blank">
 OUTRAABA🔴
