Update 1 - Copia.html

--- a/VIDEOS/RECEITAS/1 - Copia.html
+++ b/VIDEOS/RECEITAS/1 - Copia.html
@@ -262,23 +262,55 @@ Código: <a href="#NOME🔴"><img src="imagem.jpg🔴"></a>
 <!------------------------------------------------->
 <!------------------------------------------------->
 <li><a href="
-LINK🔴
+https://www.youtube-nocookie.com/embed/1z1Byt7GR9c
 " target="_blank">
-OUTRAABA🔴
-</a></li>
+ROCAMBOLE COM MASSA DE PASTEL
+<br/><img src="
+https://i.ytimg.com/vi/1z1Byt7GR9c/hqdefault.jpg
+" width="300"></a><a href="
+INGREDIENTES/ROCAMBOLE COM MASSA DE PASTEL.html
+" target="_blank"><FONT COLOR="RED"><b>Ingredientes</b></FONT></a></li><br/>
 <!------------------------------------------------->
 <li><a href="
 LINK🔴
 " target="_blank">
 OUTRAABA🔴
-</a></li>
+<br/><img src="
+IMAGEM🔴
+" width="300"></a><a href="
+INGREDIENTES/NOME🔴.html
+" target="_blank"><FONT COLOR="RED"><b>Ingredientes</b></FONT></a></li><br/>
 <!------------------------------------------------->
 <li><a href="
 LINK🔴
 " target="_blank">
 OUTRAABA🔴
-</a></li>
-
+<br/><img src="
+IMAGEM🔴
+" width="300"></a><a href="
+INGREDIENTES/NOME🔴.html
+" target="_blank"><FONT COLOR="RED"><b>Ingredientes</b></FONT></a></li><br/>
+<!------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">
+OUTRAABA🔴
+<br/><img src="
+IMAGEM🔴
+" width="300"></a><a href="
+INGREDIENTES/NOME🔴.html
+" target="_blank"><FONT COLOR="RED"><b>Ingredientes</b></FONT></a></li><br/>
+<!------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">
+OUTRAABA🔴
+<br/><img src="
+IMAGEM🔴
+" width="300"></a><a href="
+INGREDIENTES/NOME🔴.html
+" target="_blank"><FONT COLOR="RED"><b>Ingredientes</b></FONT></a></li><br/>
+<!------------------------------------------------->
 
 
 
@@ -290,24 +322,26 @@ LINK🔴
 OUTRAABA🔴
 <br/><img src="
 IMAGEM🔴
-" width="300"></a></li>
+" width="300"></a><a href="
+INGREDIENTES/NOME🔴.html
+" target="_blank"><FONT COLOR="RED"><b>Ingredientes</b></FONT></a></li><br/>
+<!------------------------------------------------->
+
+
+
+
+
+
+
+
+
 <!------------------------------------------------->
 <li><a href="
 LINK🔴
 " target="_blank">
 OUTRAABA🔴
-<br/><img src="
-IMAGEM🔴
-" width="300"></a></li>
-<!------------------------------------------------->
-<li><a href="
-LINK🔴
-" target="_blank">
-OUTRAABA🔴
-<br/><img src="
-IMAGEM🔴
-" width="300"></a></li>
-<!------------------------------------------------->
+</a></li>
+
 
 
 
