--- a/index.html
+++ b/index.html
@@ -258,6 +258,53 @@ Utilizando uma imagem como âncora:
 Código: <a href="#NOME🔴"><img src="imagem.jpg🔴"></a>
 ----------------------------->
 <!------------------------------------------------->
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+<style>
+/* Red border */
+hr.new1 {
+  border-top: 1px solid red;
+}
+
+/* Dashed red border */
+hr.new2 {
+  border-top: 1px dashed red;
+}
+
+/* Dotted red border */
+hr.new3 {
+  border-top: 1px dotted red;
+}
+
+/* Thick red border */
+hr.new4 {
+  border: 1px solid red;
+}
+
+/* Large rounded green border */
+hr.new5 {
+  border: 10px solid green;
+  border-radius: 5px;
+}
+</style>
+</head>
+<body>
+
+<h2>Style HR</h2>
+<p>Default:</p>
+<hr>
+<p>Different styles of HR:</p>
+<hr class="new1">
+<hr class="new2">
+<hr class="new3">
+<hr class="new4">
+<hr class="new5">
+
+</body>
+</html>
+
+
 <!------------------------------------------------->
 <!------------------------------------------------->
 <!------------------------------------------------->
