Update 1 - Copia.html

--- a/DOCUMENTOS/HTML/1 - Copia.html
+++ b/DOCUMENTOS/HTML/1 - Copia.html
@@ -268,9 +268,9 @@ DOWNLOAD DESSE SITE ONLINE GITHUB
 </a></li>
 <!------------------------------------------------->
 <li><a href="
-LINK🔴
+https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_cards
 " target="_blank">
-OUTRAABA🔴
+Como criar um cartão (Ficha)
 </a></li>
 <!------------------------------------------------->
 <li><a href="
