--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-<!------------------------------------------------->
+<!---------------------FAIXA AZUL----------------------->  
+<a href="https://santos246.github.io/INICIO/" target="_self">
+<div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+2>INÍCIO</FONT></p></div></a>
 <!------------------------------------------------->
 <!------------------------------------------------->
 <div class="w3-container w3-yellow">
